# mlibs

./: .clang-format  .gitignore  CMakeLists.txt  MLibs.mdj  README.md  build.sh  compile_commands.json  coverage.sh  mlibs_prj  test.py
design/external_view/interfaces/: logger.puml
design/external_view/use_cases/: actors.puml  logger.puml
design/static_view/: logger.puml
m_args/: CMakeLists.txt
m_args/api/: m_args.h
m_args/docs/: Doxyfile.in
m_args/inc/: config.h
m_args/src/: m_args.c
m_common/: CMakeLists.txt
m_common/api/: m_common.h
m_common/docs/: Doxyfile.in
m_common/inc/: config.h
m_hash/: CMakeLists.txt
m_hash/api/: m_hash.h
m_hash/docs/: Doxyfile.in
m_hash/inc/: config.h
m_hash/src/: m_hash.c
m_hash/test/: run_all.c  test.cpp
m_list/: CMakeLists.txt
m_list/api/: m_list.h
m_list/docs/: Doxyfile.in
m_list/inc/: config.h  types.h
m_list/src/: m_list.c  m_list_iterator.c
m_list/test/: append.cpp  delete.cpp  get.cpp  iterator.cpp  run_all.c  speed.cpp  speed_test.cpp
m_logger/: README.md  data.c  data.h  logger_client.c  logger_server.c
m_lrucache/: CMakeLists.txt
m_lrucache/api/: m_lrucache.h
m_lrucache/docs/: Doxyfile.in
m_lrucache/src/: m_lrucache.c
m_lrucache/test/: run_all.cpp
m_map/: CMakeLists.txt
m_map/api/: m_map.h
m_map/docs/: Doxyfile.in
m_map/inc/: config.h  types.h
m_map/src/: m_map.c  m_map_iterator.c
m_map/test/: delete.cpp  iterator.cpp  read_write.cpp  run_all.c  speed.cpp  speed_test.cpp
m_mem/: CMakeLists.txt
m_mem/api/: m_alloc.h  m_mem.h
m_mem/docs/: Doxyfile.in
m_mem/inc/: internal.h
m_mem/src/: arena_alloc.c  fixed_alloc.c  m_alloc.c  m_arena_alloc.c  m_fixed_alloc.c  m_mem.c  m_slab_alloc.c  slab_alloc.c  system_alloc.c
m_mem/test/: arena_alloc.cpp  fixed_alloc.cpp  slab_alloc.cpp
m_str/: CMakeLists.txt
m_str/api/: m_str.h
m_str/docs/: Doxyfile.in
m_str/inc/: config.h
m_str/src/: m_str.c
m_str/test/: run_all.c
m_vector/: vector.c  vector.h
mlog/: data.c  data.h  logger_client.c  logger_server.c
module_tests/: CMakeLists.txt
module_tests/common/: CMakeLists.txt  TestSuite.cc  TestSuite.hh
module_tests/logger/: CMakeLists.txt  LoggerModuleTest.cc  LoggerModuleTest.hh  run_tests.cc
src/: CMakeLists.txt  a.out  config.c  config.h  list.c  list.h  main.c  map.h  utils.c  utils.h  vector.c  vector.h
src/logger/: CMakeLists.txt  Logger.cc  Logger.hh  LoggerInterface.hh
